--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -5,12 +5,15 @@
 @use "sass:color";
 
 :root {
-  --global-bg-color: #{$white-color};
+  // --global-bg-color: #{$white-color};
+  --global-bg-color: #{$grey-color-light};
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$purple-color};
-  --global-hover-color: #{$purple-color};
+  // --global-theme-color: #{$purple-color};
+  --global-theme-color: #{$blue-color-dark};
+  // --global-hover-color: #{$purple-color};
+  --global-hover-color: #{$blue-color-very-dark};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
@@ -75,8 +78,11 @@
 }
 
 html[data-theme="dark"] {
-  --global-bg-color: #{$grey-color-dark};
-  --global-code-bg-color: #{$code-bg-color-dark};
+  // --global-bg-color: #{$grey-color-dark};
+  --global-bg-color: #{$black-color};
+  // --global-bg-color: #{$grey-900};
+  // --global-code-bg-color: #{$code-bg-color-dark};
+  --global-code-bg-color: #{$black-color};
   --global-text-color: #{$grey-color-light};
   --global-text-color-light: #{$grey-color};
   --global-theme-color: #{$cyan-color};
@@ -86,8 +92,12 @@ html[data-theme="dark"] {
   --global-footer-text-color: #{$grey-color-dark};
   --global-footer-link-color: #{$black-color};
   --global-distill-app-color: #{$grey-color-light};
-  --global-divider-color: #424246;
-  --global-card-bg-color: #{$grey-900};
+  // --global-divider-color: #424246;
+  --global-divider-color: #{$black-color};
+  // --global-divider-color: #{$blue-color-very-dark};
+  // --global-card-bg-color: #{$black-color};
+  // --global-card-bg-color: #{$grey-900};
+  --global-card-bg-color: #{$grey-color-dark};
   --global-back-to-top-bg-color: rgba(
     #{color.channel($white-color, "red", $space: rgb)},
     #{color.channel($white-color, "green", $space: rgb)},
